...
      selectedIcon: Icon(Icons.explore),
      label: 'Explore',
    ),
    NavigationDestination(
      icon: Icon(Icons.sports_esports_outlined),
      selectedIcon: Icon(Icons.sports_esports),
      label: 'Games',
    ),
    NavigationDestination(
      icon: Icon(Icons.group_outlined),
      selectedIcon: Icon(Icons.group),
      label: 'Friends',
    ),
...
              ),
              const PopupMenuItem(
                value: 'reset',
                child: ListTile(
                  contentPadding: EdgeInsets.zero,
                  leading: Icon(Icons.switch_account_outlined),
                  title: Text('Change explorer'),
                ),
              ),
            ],
            child: CircleAvatar(
              backgroundColor: const Color(0xFFEDEAFF),
              child: Text(
...
